# omr

./: .gitignore  README.md  main.py  pyproject.toml
omr/: __init__.py  annotate.py  cli.py  generator.py  grade.py  layout.py  models.py  pdf_fonts.py
omr/assets/fonts/: README.md
tests/: answer-key.json  conftest.py  test_omr.py
